--- a/index.html
+++ b/index.html
@@ -765,24 +765,26 @@
         }
 }
 
-    .logo-container {
-  display: flex;
-  justify-content: center; /* Center the logo horizontally */
-  align-items: center; /* Center the logo vertically */
-  /* Add any other styling for the container if needed */
-}
-
-.logo-circle {
-  width: 50px; /* Adjust the size as needed */
-  height: 50px; /* Make sure width and height are equal for a circle */
-  background-color: #black; /* Choose a background color */
-  color: #purple; /* Choose a text color */
-  border-radius: 50%; /* This makes it a circle */
+.logo-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 20px; /* Adjust the font size as needed */
-  font-weight: bold; /* Make the text bold if you want */
+  color: purple;
+  background-color:black;
+}
+
+.logo-circle {
+  width: 50px;
+  height: 50px;
+  background-color: purple;
+  color: black;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  font-weight: bold;
+  border: 2px solid purple; /* Added border */
 }
     </style>
 </head>
