--- a/index.html
+++ b/index.html
@@ -775,7 +775,7 @@
 .logo-circle {
   width: 50px;
   height: 50px;
-  background-color: purple;
+  background-color: white;
   color: black;
   border-radius: 50%;
   display: flex;
